feat: update live sync to be 90s and imm check 1 min