@@ -9,12 +9,12 @@ import java.util.stream.Collectors;
 import org.springframework.stereotype.Component;
 
 import com.ligitabl.api.client.FootballDataClient;
-import com.ligitabl.api.client.FootballDataClient.ApiError;
 import com.ligitabl.api.client.footballdata.*;
 import com.ligitabl.api.runners.importer.model.entities.ExternalCompetition;
 import com.ligitabl.api.runners.importer.model.entities.ExternalMatch;
 import com.ligitabl.api.runners.importer.model.entities.ExternalSeason;
 import com.ligitabl.api.runners.importer.model.entities.ExternalTeam;
+import com.ligitabl.api.runners.importer.model.errors.ApiError;
 import com.ligitabl.api.runners.importer.model.errors.ImportError;
 import com.ligitabl.api.runners.importer.model.errors.ValidationError;
 import com.ligitabl.api.runners.importer.model.valueobjects.CompetitionCode;
@@ -46,23 +46,28 @@ public class FootballDataClientAdapter implements FootballDataGateway {
                 .flatMap(this::mapMatchesResponse);
     }
 
-    private ImportError mapApiError(ApiError error) {
+    private ImportError mapApiError(com.ligitabl.api.client.FootballDataClient.ApiError error) {
         return switch (error) {
-            case ApiError.NetworkError e -> com.ligitabl.api.runners.importer.model.errors.ApiError.connectionFailed(
-                    e.message());
+            case com.ligitabl.api.client.FootballDataClient.ApiError.NetworkError e ->
+                    ApiError.connectionFailed(e.message());
 
-            case ApiError.RateLimitExceeded e -> com.ligitabl.api.runners.importer.model.errors.ApiError.rateLimited();
+            case com.ligitabl.api.client.FootballDataClient.ApiError.RateLimitExceeded e ->
+                    ApiError.rateLimited();
 
-            case ApiError.NotFound e -> com.ligitabl.api.runners.importer.model.errors.ApiError.of(e.message(), 404);
+            case com.ligitabl.api.client.FootballDataClient.ApiError.NotFound e ->
+                    ApiError.of(e.message(), 404);
 
-            case ApiError.Unauthorized e -> com.ligitabl.api.runners.importer.model.errors.ApiError.of(e.message(), 401);
+            case com.ligitabl.api.client.FootballDataClient.ApiError.Unauthorized e ->
+                    ApiError.of(e.message(), 401);
 
-            case ApiError.ServerError e -> com.ligitabl.api.runners.importer.model.errors.ApiError.of(
-                    e.message(), e.statusCode());
+            case com.ligitabl.api.client.FootballDataClient.ApiError.ServerError e ->
+                    ApiError.of(e.message(), e.statusCode());
 
-            case ApiError.UnknownError e -> com.ligitabl.api.runners.importer.model.errors.ApiError.of(e.message(), 0);
+            case com.ligitabl.api.client.FootballDataClient.ApiError.UnknownError e ->
+                    ApiError.of(e.message(), 0);
 
-            case ApiError.UnexpectedError e -> com.ligitabl.api.runners.importer.model.errors.ApiError.of(e.message(), 500);
+            case com.ligitabl.api.client.FootballDataClient.ApiError.UnexpectedError e ->
+                    ApiError.of(e.message(), 500);
         };
     }
 
@@ -72,7 +77,7 @@ public class FootballDataClientAdapter implements FootballDataGateway {
     private Either<ImportError, ExternalCompetition> mapCompetitionResponse(CompetitionResponse response) {
 
         if (response.currentSeason() == null) {
-            return left(com.ligitabl.api.runners.importer.model.errors.ApiError.of("Competition has no current season", 200));
+                        return left(ApiError.of("Competition has no current season", 200));
         }
 
         CurrentSeason currentSeason = response.currentSeason();
@@ -83,7 +88,7 @@ public class FootballDataClientAdapter implements FootballDataGateway {
                         currentSeason.endDate().toString(),
                         currentSeason.currentMatchday())
                 .flatMap(season -> ExternalCompetition.create(
-                        response.id().intValue(), // Convert Long to Integer
+                        response.id().intValue(),
                         response.name(),
                         response.code(),
                         season));
@@ -100,11 +105,11 @@ public class FootballDataClientAdapter implements FootballDataGateway {
         }
 
         // Map each match DTO to ExternalMatch
-        var results = response.matches().stream().map(this::mapMatchDto).collect(Collectors.toList());
+        var results = response.matches().stream().map(this::mapMatchDto).toList();
 
         // Check if any mapping failed
         var failures =
-                results.stream().filter(Either::isLeft).map(Either::getLeft).collect(Collectors.toList());
+                results.stream().filter(Either::isLeft).map(Either::getLeft).toList();
 
         if (!failures.isEmpty()) {
             log.warn("Failed to map {} matches", failures.size());
@@ -120,7 +125,6 @@ public class FootballDataClientAdapter implements FootballDataGateway {
     }
 
     private Either<ImportError, ExternalMatch> mapMatchDto(MatchDto dto) {
-        // Map teams
         Either<ImportError, ExternalTeam> homeTeamResult = mapTeam(dto.homeTeam());
         Either<ImportError, ExternalTeam> awayTeamResult = mapTeam(dto.awayTeam());
 
@@ -131,9 +135,8 @@ public class FootballDataClientAdapter implements FootballDataGateway {
                 ? dto.score().fullTime().away()
                 : null;
 
-        // Combine results using flatMap
         return homeTeamResult.flatMap(homeTeam -> awayTeamResult.flatMap(awayTeam -> ExternalMatch.create(
-                dto.id().intValue(), // Convert Long to Integer
+                dto.id().intValue(),
                 dto.utcDate(),
                 dto.status(),
                 dto.matchday(),
@@ -143,30 +146,24 @@ public class FootballDataClientAdapter implements FootballDataGateway {
                 awayGoals)));
     }
 
-    /**
-     * Map HomeTeam to domain ExternalTeam
-     */
     private Either<ImportError, ExternalTeam> mapTeam(HomeTeam team) {
         if (team == null || team.id() == null) {
             return left(ValidationError.of("Team data is missing", "team"));
         }
 
         return ExternalTeam.create(
-                team.id().intValue(), // Convert Long to Integer
+                team.id().intValue(),
                 team.name(),
                 team.tla());
     }
 
-    /**
-     * Map AwayTeam to domain ExternalTeam
-     */
     private Either<ImportError, ExternalTeam> mapTeam(AwayTeam team) {
         if (team == null || team.id() == null) {
             return left(ValidationError.of("Team data is missing", "team"));
         }
 
         return ExternalTeam.create(
-                team.id().intValue(), // Convert Long to Integer
+                team.id().intValue(),
                 team.name(),
                 team.tla());
     }
